favorit database added

--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -74,6 +74,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="TextView" />
+
+                <Switch
+                    android:id="@+id/switch_fav"
+                    style="@style/text_shadow"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/favorit" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
