--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -16,6 +16,7 @@
         android:layout_margin="10dp"
         android:layout_weight="1"
         android:text="author"
+        android:textColor="@color/white"
         android:textSize="10sp" />
 
     <TextView
@@ -26,5 +27,6 @@
         android:layout_margin="10dp"
         android:layout_weight="3"
         android:text="content"
+        android:textColor="@color/white"
         android:textSize="10sp" />
 </LinearLayout>
