--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/action_movies_rating"
         android:orderInCategory="1"
-        android:title="@string/movie_rating"
-        app:showAsAction="ifRoom" />
+        android:title="@string/movie_rating" />
     <item
         android:id="@+id/action_movies_popularity"
         android:orderInCategory="2"
-        android:title="@string/movie_popularity"
-        app:showAsAction="ifRoom" />
+        android:title="@string/movie_popularity" />
+    <item
+        android:id="@+id/action_movies_fav"
+        android:orderInCategory="2"
+        android:title="@string/movie_fav" />
 </menu>
