--- a/app/src/main/res/layout/movie_find_fragment.xml
+++ b/app/src/main/res/layout/movie_find_fragment.xml
@@ -41,6 +41,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/movie_find_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/search_query_bar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
